--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,16 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
+    "@mdi/js": "^6.8.96",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@smui/button": "5.0.1",
+    "@smui/common": "5.0.1",
+    "@smui/tab": "5.0.1",
+    "@smui/tab-bar": "5.0.1",
     "@tsconfig/svelte": "^2.0.0",
+    "moment": "^2.29.3",
     "rollup": "^2.75.7",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -24,6 +30,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-materialify": "^0.3.11"
   }
 }
