Configuration and packages

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -5,7 +5,8 @@
     "strict": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false,
   },
 
   "include": ["src/**/*"],
