--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "svelte": "^3.48.0",
     "svelte-check": "^2.7.2",
     "svelte-preprocess": "^4.10.7",
+    "svelte-quill": "^1.2.0",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
